--- a/style.css
+++ b/style.css
@@ -225,7 +225,7 @@ nav ul li a:hover::after{
     border-radius: 10px;
     position: relative;
     overflow: hidden;
-    height: 400px;
+    height: 400vh;
 }
 
 .work img{
