--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body{
 }
 
 .container{
-    padding: 10px 10%;
+    padding: 0 5%;
 }
 
 nav{
@@ -101,9 +101,9 @@ nav ul li a:hover::after{
 }
 
 #about{
-    padding: 80px 0;
+    padding: 80px 0 0;
     width: 100%;
-    height: 100vh;
+    height: fit-content;
     background-color: #0d47a1;
     color: #f1f9ff;
 }
