--- a/style.css
+++ b/style.css
@@ -225,12 +225,12 @@ nav ul li a:hover::after{
     border-radius: 10px;
     position: relative;
     overflow: hidden;
-    height: 35vh;
+    height: 300px;
 }
 
 .work img{
     width: 100%;
-    height: fit-content;
+    height: 100%;
     border-radius: 10px;
     display: block;
     object-fit: cover;
