--- a/style.css
+++ b/style.css
@@ -601,7 +601,7 @@ nav .fa-regular{
         margin-right: 20px;
     }
     .tab-contents{
-        height: 100vh;
+        height:fit-content;
     }
     #works{
         align-items: center;
