--- a/style.css
+++ b/style.css
@@ -4,6 +4,19 @@
     font-family: 'Lato', sans-serif;
     box-sizing: border-box;
 }
+
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background: rgba(13, 71, 171,0.8);
+    border-radius: 10px;
+  }
 html{
     scroll-behavior: smooth;
 }
