--- a/style.css
+++ b/style.css
@@ -548,7 +548,7 @@ nav .fa-regular{
         display: none;
     }
     #header{
-        background-image: url(immagini/cv1smalldev.png);
+        background-image: url(immagini/foto-1-per-web-mobile-portfolio2.0.png);
     }
     .header-text{
         margin-top: 100%;
